# tilekit

./: ATTRIBUTIONS.txt  CONTRIBUTING.md  Cargo.toml  HACKING.md  README.md  justfile
scripts/: bundler.sh  install.sh  tar.exclude
server/: .gitignore  api.py  cache_utils.py  config.py  gpt_oss_prompt.txt  hf_downloader.py  main.py  mlx_api.py  mlx_runner.py  model_card.py  pyproject.toml  reasoning_utils.py  runtime.py  schemas.py  system_prompt.txt  throttled_download_worker.py
server/backend/: linux.py  mlx.py  mlx_backend.py  mlx_runner.py
server/backend/mlx_engine/: __init__.py  generate.py  stop_string_processor.py
server/backend/mlx_engine/model_kit/: model_kit.py
server/backend/mlx_engine/model_kit/patches/: gemma3n.py
server/backend/mlx_engine/model_kit/vision_add_ons/: base.py  gemma3.py  gemma3n.py  mistral3.py  pixtral.py  process_prompt_with_images.py
server/backend/mlx_engine/utils/: eot_tokens.py  fix_mistral_pre_tokenizer.py  image_utils.py  logger.py  outlines_transformer_tokenizer.py  progress_decorators.py  prompt_processing.py  register_models.py  speculative_decoding.py  top_logprobs.py
server/backend/mlx_engine/vision_model_kit/: _transformers_compatibility.py  vision_model_kit.py  vision_model_wrapper.py
server/mem_agent/: engine.py  utils.py
server/tests/: test_gpt_oss_flow.py  test_inference.py  test_insider_executor.py  test_lora.py  test_responses_api.py  test_venvstack_sandbox.py
src/: main.rs
src/commands/: mod.rs
src/runner/: mlx.rs
tilekit/: Cargo.toml
tilekit/fixtures/: a.modelfile  llama_bad.Modelfile
tilekit/src/: lib.rs  modelfile.rs
tiles/: Cargo.toml
tiles/fixtures/: optimize_data.json
tiles/src/: lib.rs  main.rs
tiles/src/commands/: mod.rs  optimize.rs
tiles/src/core/: health.rs  mod.rs
tiles/src/runner/: mlx.rs
tiles/src/runtime/: cpu.rs  mlx.rs  mod.rs
tiles/src/utils/: config.rs  hf_model_downloader.rs  mod.rs
