[project]
name = "server"
version = "0.1.0"
description = "Local MLX inference server for the Tiles CLI"
requires-python = "==3.13.*"
dependencies = [
    "fastapi==0.119.0",
    "uvicorn==0.38.0",
    "mlx-lm==0.28.3",
    "mlx-vlm==0.3.9",
    "outlines==1.2.9",
    "outlines-core==0.1.26",
    "psutil==7.2.1",
    "sentencepiece==0.2.1",
    "pillow==12.1.0",
    "transformers==4.49.0",
    "black==25.9.0",
    "huggingface-hub==0.35.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["backend", "backend.*"]
