[package]
name = "tiles"
version = "0.3.1"
edition = "2024"

[dependencies]
tilekit = {path = "../tilekit"}
clap = { version = "4.5.48", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1" , features = ["macros", "rt-multi-thread"]}
owo-colors = "4"
futures-util = "0.3"
hf-hub = {version = "0.4", features = ["tokio"]}
rustyline = "17.0"
dspy_rs = { package = "dspy-rs", version = "0.7.3" }
bon = "3.7.0"
indexmap = "2.2.0"
